# svm

./: CMakeLists.txt  README.md  ascii_serialization.hpp  combinatorics.hpp  container_factory.hpp  data_view.cpp  dataset.hpp  hdf5_serialization.hpp  kernel.hpp  label.hpp  model.hpp  parameters.hpp  problem.hpp  serializer.hpp  svm-wrapper.hpp
combinatorics/: binomial.hpp  ipow.hpp  multinomial.hpp  number_of_permutations.hpp
include/combinatorics/: binomial.hpp  number_of_permutations.hpp
include/svm/: dataset.hpp  kernel.hpp  label.hpp  model.hpp  problem.hpp  svm.hpp
include/svm/detail/: always.hpp  basic_parameters.hpp  basic_problem.hpp  container_factory.hpp  patch_through_problem.hpp  precompute_kernel_problem.hpp
include/svm/kernel/: linear.hpp  linear_precomputed.hpp  polynomial.hpp  rbf.hpp  sigmoid.hpp
include/svm/serialization/: ascii.hpp  hdf5.hpp  serializer.hpp
include/svm/traits/: label_traits.hpp
kernel/: binomial.hpp  linear.hpp  linear_precomputed.hpp  polynomial.hpp  rbf.hpp  sigmoid.hpp
libsvm/: CMakeLists.txt  svm.cpp  svm.h
src/: svm.cpp
test/: CMakeLists.txt  ascii_serialization.cpp  circle.cpp  circle_model.hpp  combinatorics.cpp  data_view.cpp  dot.cpp  example.cpp  hdf5_serialization.cpp  hyperplane.cpp  hyperplane_builtin.cpp  hyperplane_coeffs.cpp  hyperplane_model.hpp  hyperplane_poly.cpp  hyperplane_precomputed.cpp  hyperplane_sigmoid.cpp  hyperplane_test.hpp  label_classifier_stability.cpp  model_test.hpp  multi_introspect.cpp  poly_introspect.cpp  problem.cpp  serialization.cpp  serialization_test.hpp  test_problems_equal.hpp
